# inkfuse

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  submit_result.py
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  build_test.yml  built_test.yml  cmake.yml  coverage.yml
bench/: compiler_invoke.cpp  ht_benchmark.cpp  vectorized_ht.cpp
bench/testdata/: complex_program.h  simple_program.h
cmake/: clang-tidy.cmake
data/: delivery.sql  example.foo  fork_example.cc  new_order.sql  olap.sql  queryc_1.sql  queryc_2.sql  schema.sql
data/dlopen/: lib.cc  main.cc
docs/: pipeline_dag.md
include/imlab/: database.h  schema.h  semana.h
include/imlab/algebra/: codegen_helper.h  expression.h  inner_join.h  iu.h  operator.h  print.h  selection.h  table_scan.h
include/imlab/infra/: bits.h  error.h  hash.h  hash_table.h  settings.h  template.h  types.h
include/imlab/schemac/: schema_compiler.h  schema_parse_context.h
include/imlab/storage/: relation.h
include/imlab/test/: data.h
reproduce/: .gitignore  README.md  analyze_microbenchmark.py  generate_tpch.sh  plot.py  plot_inkfuse.py  plot_split_y.py  postprocess_umbra.py  reproduce_all.sh  reproduce_duckdb.py  reproduce_hyperapi.py  reproduce_inkfuse.sh  reproduce_umbra.sh  requirements.txt
reproduce/sql/: l_point.sql  load.sql  q1.sql  q14.sql  q18.sql  q19.sql  q3.sql  q4.sql  q5.sql  q_bigjoin.sql  schema.sql
src/: database.cc  semana.cc
src/algebra/: AggFunctionRegistry.cpp  AggFunctionRegisty.h  Aggregation.cpp  Aggregation.h  AggregationMerger.cpp  AggregationMerger.h  ColumnScan.cpp  ColumnScan.h  CompilationContext.cpp  CompilationContext.h  ExpressionOp.cpp  ExpressionOp.h  Filter.cpp  Filter.h  FuseChunkSink.cpp  FuseChunkSink.h  IU.h  IUScope.cpp  IUScope.h  Join.cpp  Join.h  Operator.h  Parameter.h  Pipeline.cpp  Pipeline.h  Print.cpp  Print.h  RelAlgOp.cpp  RelAlgOp.h  RelalgOp.h  Suboperator.h  TableScan.cpp  TableScan.h  codegen_helper.cc  expression.cc  inner_join.cc  iu.cc  print.cc  selection.cc  table_scan.cc
src/algebra/suboperators/: ColumnFilter.cpp  ColumnFilter.h  ColumnScan.cpp  ColumnScan.h  Copy.cpp  Copy.h  Expression.h  ExpressionSubop.cpp  ExpressionSubop.h  FilterSubop.cpp  FilterSubop.h  FuseChunkSink.cpp  FuseChunkSink.h  HtLookupSubop.cpp  HtLookupSubop.h  IndexedIUProvider.cpp  IndexedIUProvider.h  LazyExpressionSubop.cpp  LazyExpressionSubop.h  LazyParam.h  LoopDriver.cpp  LoopDriver.h  RuntimeFunctionSubop.cpp  RuntimeFunctionSubop.h  RuntimeParam.h  Suboperator.cpp  Suboperator.h
src/codegen/: Backend.h  Expression.cpp  Expression.h  FragmentGenerator.h  IR.cpp  IR.h  IRBuilder.cpp  IRBuilder.h  IRHelpers.h  Statement.cpp  Statement.h  Type.cpp  Type.h  Types.cpp  Types.h  Value.cpp  Value.h
src/codegen/backend_c/: BackendC.cpp  BackendC.h  (+3 more)
src/common/: Barrier.cpp  Barrier.h  Helpers.cpp  Helpers.h  QueriesTPCH.h  TPCH.cpp  TPCH.h
src/exec/: DeferredState.cpp  DeferredState.h  ExecutionContext.cpp  ExecutionContext.h  FuseChunk.cpp  FuseChunk.h  InterpretationResult.h  InterruptableJob.cpp  InterruptableJob.h  PipelineExecutor.cpp  PipelineExecutor.h  QueryExecutor.cpp  QueryExecutor.h  SubstitutionContext.h
src/infra/: types.cc  types.h
src/interpreter/: AggregationFragmentizer.cpp  AggregationFragmentizer.h  ColumnFilterFragmentizer.cpp  ColumnFilterFragmentizer.h  ColumnScanFragmentizer.h  CopyFragmentizer.cpp  CopyFragmentizer.h  CountingSinkFragmentizer.cpp  CountingSinkFragmentizer.h  ExpressionFragmentizer.cpp  ExpressionFragmentizer.h  FilterFragmentizer.cpp  FilterFragmentizer.h  FragmentCache.cpp  FragmentCache.h  FragmentGenerator.cpp  FragmentGenerator.h  HashTableSourceFragmentizer.cpp  HashTableSourceFragmentizer.h  HtLookupSubopFragmentizer.cpp  HtLookupSubopFragmentizer.h  KeyPackingFragmentizer.cpp  KeyPackingFragmentizer.h  LazyExpressionFragmentizer.cpp  LazyExpressionFragmentizer.h  RuntimeExpressionFragmentizer.cpp  RuntimeExpressionFragmentizer.h  RuntimeFunctionSubopFragmentizer.cpp  RuntimeFunctionSubopFragmentizer.h  RuntimeKeyExpressionFragmentizer.cpp  RuntimeKeyExpressionFragmentizer.h  TScanFragmentizer.cpp  TScanFragmentizer.h
src/runtime/: ExternHashTableRuntime.cpp  ExternHashTableRuntime.h  ExternRuntime.cpp  ExternRuntime.h  HashRuntime.cpp  HashRuntime.h  HashTableRuntime.cpp  HashTableRuntime.h  HashTables.cpp  HashTables.h  MemoryRuntime.cpp  MemoryRuntime.h  NewHashTables.cpp  NewHashTables.h  Runtime.cpp  Runtime.h  TupleMaterializer.cpp  TupleMaterializer.h
src/storage/: Relation.cc  Relation.cpp  Relation.h  relation.cc  relation.h
test/: data.cc  database_test.cc  sample_programs.h  test_barrier.cpp  test_c_backend.cpp  test_fragmentizors.cpp  test_ir.cpp  test_repipe.cpp  test_runtime.cpp  test_storage.cpp  tester.cc
test/algebra/: test_iu_scope.cpp  test_repipe.cpp
test/exec/: test_interruptable_job.cpp
test/multithreading/: test_aggregation.cpp  test_join.cpp  test_scan_expr_filter.cpp
test/operators/: test_aggregation.cpp  test_expression.cpp  test_filter.cpp  test_join.cpp  test_table_scan.cpp
test/runtime/: test_atomic_hash_table.cpp  test_atomic_hash_table_complex_key.cpp  test_atomic_hash_table_outer_join.cpp  test_hash_table.cpp  test_hash_table_complex_key.cpp  test_tuple_materializer.cpp
test/suboperators/: minimal_pipeline.cpp  test_hash_table_source.cpp  test_ht_inserts.cpp  test_ht_lookup.cpp  test_key_packing.cpp  test_lazy_param.cpp  test_minimal_pipeline.cpp  test_runtime_key_expression.cpp  test_runtime_param.cpp  test_scratch_pad_ius.cpp  test_sources.cpp  test_tscan_source.cpp
test/tpch/: test_ingest.cpp  test_queries.cpp
tools/: imlabdb.cc  inkfuse_bench.cpp  inkfuse_runner.cc  inkfuse_runner.cpp
tools/queryc/: code_generator.cc  code_generator.h  local.cmake  query_ast.h  query_parse_context.cc  query_parse_context.h  query_parser.y  query_scanner.l  queryc.cc  tester.cc
tools/schemac/: local.cmake  schema_compiler.cc  schema_parse_context.cc  schema_parser.y  schema_scanner.l  schemac.cc  tester.cc
tpch/: l_count.sql  l_point.sql
(+61 files in other folders)
